--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 # generated files
 bin/
 gen/
+build/
 
 # Local configuration file (sdk path, etc)
 local.properties
+*~
 
 # Eclipse project files
 .classpath
